--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,9 +23,9 @@
         </ul>
     </div>
 </footer>
-<script type="text/javascript" src="/components/bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="/components/geopattern/geopattern.min.js"></script>
-<script type="text/javascript" src="/assets/js/script.js"></script>
+<!--<script type="text/javascript" src="/components/bootstrap/js/bootstrap.min.js"></script>-->
+<!--<script type="text/javascript" src="/components/geopattern/geopattern.min.js"></script>-->
+<!--<script type="text/javascript" src="/assets/js/script.js"></script>-->
 {% for javascript in page.js %}
 <script src="/assets/js/{{javascript}}"></script>
 {% endfor %}
