--- a/_includes/github-head.html
+++ b/_includes/github-head.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/components/font-awesome/css/font-awesome.min.css">
     <link type="text/css" rel="stylesheet" href="{{site.url}}/resources/syntax/shCoreDefault.css"/>
     <link rel="stylesheet" type="text/css" href="/assets/css/common.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/pattern.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/github.css">
     {% for css in page.romotecss %}
     <link rel="stylesheet" href="{{site.url}}{{css}}">
