--- a/_includes/jumbotron.html
+++ b/_includes/jumbotron.html
@@ -1,4 +1,4 @@
-<section class="jumbotron geopattern" data-pattern-id="{{ page.title }}">
+<section class="jumbotron gradient-pattern{{page.title|size|modulo:9}}" data-pattern-id="{{ page.title }}">
     <div class="container">
         <h3>{{ page.title }}</h3>
         <div class="meta-info">
