--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -163,6 +163,17 @@ img {
     font-weight: 500;
 }
 
+.well {
+    min-height: 20px;
+    padding: 19px;
+    margin-bottom: 20px;
+    background-color: #f5f5f5;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+}
+
 /* modify bootstrap default style end*/
 /*.geopattern {*/
 /*background-size: contain;*/
