add about site page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,15 +12,16 @@
                     <span class="fa fa-user fa-fw"></span> About Me
                 </a>
             </li>
+            <li role="presentation">
+                <a href="/about/site">
+                    <span class="fa fa-info fa-fw"></span> About Site
+                </a>
+            </li>
             <li role="presentation"><a href="/sitemap.xml">
                 <span class="fa fa-sitemap fa-fw"></span> Sitemap</a>
             </li>
-            <li role="presentation" class="pull-right">
-                <a href="javascript:$('body').animate({scrollTop: 0}, 400);">
-                    <span class="fa fa-arrow-up"></span>
-                </a>
-            </li>
         </ul>
+        <!--<a href="#top"><span class="fa fa-arrow-up"></span></a>-->
     </div>
 </footer>
 <!--<script type="text/javascript" src="/components/bootstrap/js/bootstrap.min.js"></script>-->
