add pattern_module var; remove footer menu icon

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,16 +9,16 @@
             </li>
             <li role="presentation">
                 <a href="/about">
-                    <span class="fa fa-user fa-fw"></span> About Me
+                    About Me
                 </a>
             </li>
             <li role="presentation">
                 <a href="/about/site">
-                    <span class="fa fa-info fa-fw"></span> About Site
+                    About Site
                 </a>
             </li>
             <li role="presentation"><a href="/sitemap.xml">
-                <span class="fa fa-sitemap fa-fw"></span> Sitemap</a>
+                Sitemap</a>
             </li>
         </ul>
         <!--<a href="#top"><span class="fa fa-arrow-up"></span></a>-->
