fixed some issues

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
         <hr/>
         <ul class="nav nav-pills">
             <li role="presentation">
-                <a href="/">
+                <a href="javascript:void(0)">
                     <span class="fa fa-copyright fa-fw"></span>2016 TT-CC
                 </a>
             </li>
@@ -21,12 +21,8 @@
                 Sitemap</a>
             </li>
         </ul>
-        <!--<a href="#top"><span class="fa fa-arrow-up"></span></a>-->
     </div>
 </footer>
-<!--<script type="text/javascript" src="/components/bootstrap/js/bootstrap.min.js"></script>-->
-<!--<script type="text/javascript" src="/components/geopattern/geopattern.min.js"></script>-->
-<!--<script type="text/javascript" src="/assets/js/script.js"></script>-->
 {% for javascript in page.js %}
 <script src="/assets/js/{{javascript}}"></script>
 {% endfor %}
