--- a/assets/css/pattern.css
+++ b/assets/css/pattern.css
@@ -35,7 +35,7 @@
     background-size: 100px 100px;
 }
 
-.gradient-pattern2 {
+.gradient-pattern6 {
     color: rgba(255, 255, 255, 1);
     -o-text-overflow: clip;
     text-overflow: clip;
@@ -67,22 +67,6 @@
 }
 
 .gradient-pattern4 {
-    color: rgb(255, 255, 255);
-    -o-text-overflow: clip;
-    text-overflow: clip;
-    background: -webkit-radial-gradient(rgb(138, 0, 0) 4%, rgb(92, 0, 0) 9%, rgba(102, 0, 0, 0) 9%), -webkit-radial-gradient(rgb(138, 0, 0) 4%, rgb(92, 0, 0) 8%, rgba(102, 0, 0, 0) 10%), -webkit-radial-gradient(rgba(153, 0, 0, 0.8) 20%, rgba(102, 0, 0, 0) 100%), -webkit-radial-gradient(rgba(153, 0, 0, 0.8) 20%, rgba(102, 0, 0, 0) 100%), -webkit-radial-gradient(rgb(102, 0, 0) 35%, rgba(102, 0, 0, 0) 60%), -webkit-radial-gradient(rgb(102, 0, 0) 35%, rgba(102, 0, 0, 0) 60%), -webkit-radial-gradient(rgba(76, 0, 0, 0.701961) 0, rgba(102, 0, 0, 0) 100%), -webkit-radial-gradient(rgba(76, 0, 0, 0.701961) 0, rgba(102, 0, 0, 0) 100%), -webkit-linear-gradient(45deg, rgba(102, 0, 0, 0) 49%, rgb(0, 0, 0) 50%, rgba(102, 0, 0, 0) 70%), -webkit-linear-gradient(135deg, rgba(102, 0, 0, 0) 49%, rgb(0, 0, 0) 50%, rgba(102, 0, 0, 0) 70%), rgb(51, 0, 0);
-    background: -moz-radial-gradient(rgb(138, 0, 0) 4%, rgb(92, 0, 0) 9%, rgba(102, 0, 0, 0) 9%), -moz-radial-gradient(rgb(138, 0, 0) 4%, rgb(92, 0, 0) 8%, rgba(102, 0, 0, 0) 10%), -moz-radial-gradient(rgba(153, 0, 0, 0.8) 20%, rgba(102, 0, 0, 0) 100%), -moz-radial-gradient(rgba(153, 0, 0, 0.8) 20%, rgba(102, 0, 0, 0) 100%), -moz-radial-gradient(rgb(102, 0, 0) 35%, rgba(102, 0, 0, 0) 60%), -moz-radial-gradient(rgb(102, 0, 0) 35%, rgba(102, 0, 0, 0) 60%), -moz-radial-gradient(rgba(76, 0, 0, 0.701961) 0, rgba(102, 0, 0, 0) 100%), -moz-radial-gradient(rgba(76, 0, 0, 0.701961) 0, rgba(102, 0, 0, 0) 100%), -moz-linear-gradient(45deg, rgba(102, 0, 0, 0) 49%, rgb(0, 0, 0) 50%, rgba(102, 0, 0, 0) 70%), -moz-linear-gradient(-45deg, rgba(102, 0, 0, 0) 49%, rgb(0, 0, 0) 50%, rgba(102, 0, 0, 0) 70%), rgb(51, 0, 0);
-    background: radial-gradient(rgb(138, 0, 0) 4%, rgb(92, 0, 0) 9%, rgba(102, 0, 0, 0) 9%), radial-gradient(rgb(138, 0, 0) 4%, rgb(92, 0, 0) 8%, rgba(102, 0, 0, 0) 10%), radial-gradient(rgba(153, 0, 0, 0.8) 20%, rgba(102, 0, 0, 0) 100%), radial-gradient(rgba(153, 0, 0, 0.8) 20%, rgba(102, 0, 0, 0) 100%), radial-gradient(rgb(102, 0, 0) 35%, rgba(102, 0, 0, 0) 60%), radial-gradient(rgb(102, 0, 0) 35%, rgba(102, 0, 0, 0) 60%), radial-gradient(rgba(76, 0, 0, 0.701961) 0, rgba(102, 0, 0, 0) 100%), radial-gradient(rgba(76, 0, 0, 0.701961) 0, rgba(102, 0, 0, 0) 100%), linear-gradient(45deg, rgba(102, 0, 0, 0) 49%, rgb(0, 0, 0) 50%, rgba(102, 0, 0, 0) 70%), linear-gradient(-45deg, rgba(102, 0, 0, 0) 49%, rgb(0, 0, 0) 50%, rgba(102, 0, 0, 0) 70%), rgb(51, 0, 0);
-    background-position: 0 0, 50px 50px, 50px 0, 0 50px, 50px 0, 100px 50px, 0 0, 50px 50px, 0 0, 0 0;
-    -webkit-background-origin: padding-box;
-    background-origin: padding-box;
-    -webkit-background-clip: border-box;
-    background-clip: border-box;
-    -webkit-background-size: 100px 100px;
-    background-size: 100px 100px;
-}
-
-.gradient-pattern5 {
     color: rgba(255, 255, 255, 1);
     -o-text-overflow: clip;
     text-overflow: clip;
@@ -98,7 +82,7 @@
     background-size: 50px 50px;
 }
 
-.gradient-pattern6 {
+.gradient-pattern5 {
     color: rgba(255, 255, 255, 1);
     -o-text-overflow: clip;
     text-overflow: clip;
@@ -114,7 +98,7 @@
     background-size: 40px 40px;
 }
 
-.gradient-pattern7 {
+.gradient-pattern2 {
     color: rgb(255, 255, 255);
     -o-text-overflow: clip;
     text-overflow: clip;
@@ -130,7 +114,9 @@
     background-size: 64px 128px;
 }
 
-.gradient-pattern8 {
+/**/
+
+.gradient-pattern7 {
     color: rgba(255, 255, 255, 1);
     -o-text-overflow: clip;
     text-overflow: clip;
@@ -144,6 +130,22 @@
     background-clip: border-box;
     -webkit-background-size: 6em 6em;
     background-size: 6em 6em;
+}
+
+.gradient-pattern8 {
+    color: rgb(255, 255, 255);
+    -o-text-overflow: clip;
+    text-overflow: clip;
+    background: -webkit-radial-gradient(rgb(138, 0, 0) 4%, rgb(92, 0, 0) 9%, rgba(102, 0, 0, 0) 9%), -webkit-radial-gradient(rgb(138, 0, 0) 4%, rgb(92, 0, 0) 8%, rgba(102, 0, 0, 0) 10%), -webkit-radial-gradient(rgba(153, 0, 0, 0.8) 20%, rgba(102, 0, 0, 0) 100%), -webkit-radial-gradient(rgba(153, 0, 0, 0.8) 20%, rgba(102, 0, 0, 0) 100%), -webkit-radial-gradient(rgb(102, 0, 0) 35%, rgba(102, 0, 0, 0) 60%), -webkit-radial-gradient(rgb(102, 0, 0) 35%, rgba(102, 0, 0, 0) 60%), -webkit-radial-gradient(rgba(76, 0, 0, 0.701961) 0, rgba(102, 0, 0, 0) 100%), -webkit-radial-gradient(rgba(76, 0, 0, 0.701961) 0, rgba(102, 0, 0, 0) 100%), -webkit-linear-gradient(45deg, rgba(102, 0, 0, 0) 49%, rgb(0, 0, 0) 50%, rgba(102, 0, 0, 0) 70%), -webkit-linear-gradient(135deg, rgba(102, 0, 0, 0) 49%, rgb(0, 0, 0) 50%, rgba(102, 0, 0, 0) 70%), rgb(51, 0, 0);
+    background: -moz-radial-gradient(rgb(138, 0, 0) 4%, rgb(92, 0, 0) 9%, rgba(102, 0, 0, 0) 9%), -moz-radial-gradient(rgb(138, 0, 0) 4%, rgb(92, 0, 0) 8%, rgba(102, 0, 0, 0) 10%), -moz-radial-gradient(rgba(153, 0, 0, 0.8) 20%, rgba(102, 0, 0, 0) 100%), -moz-radial-gradient(rgba(153, 0, 0, 0.8) 20%, rgba(102, 0, 0, 0) 100%), -moz-radial-gradient(rgb(102, 0, 0) 35%, rgba(102, 0, 0, 0) 60%), -moz-radial-gradient(rgb(102, 0, 0) 35%, rgba(102, 0, 0, 0) 60%), -moz-radial-gradient(rgba(76, 0, 0, 0.701961) 0, rgba(102, 0, 0, 0) 100%), -moz-radial-gradient(rgba(76, 0, 0, 0.701961) 0, rgba(102, 0, 0, 0) 100%), -moz-linear-gradient(45deg, rgba(102, 0, 0, 0) 49%, rgb(0, 0, 0) 50%, rgba(102, 0, 0, 0) 70%), -moz-linear-gradient(-45deg, rgba(102, 0, 0, 0) 49%, rgb(0, 0, 0) 50%, rgba(102, 0, 0, 0) 70%), rgb(51, 0, 0);
+    background: radial-gradient(rgb(138, 0, 0) 4%, rgb(92, 0, 0) 9%, rgba(102, 0, 0, 0) 9%), radial-gradient(rgb(138, 0, 0) 4%, rgb(92, 0, 0) 8%, rgba(102, 0, 0, 0) 10%), radial-gradient(rgba(153, 0, 0, 0.8) 20%, rgba(102, 0, 0, 0) 100%), radial-gradient(rgba(153, 0, 0, 0.8) 20%, rgba(102, 0, 0, 0) 100%), radial-gradient(rgb(102, 0, 0) 35%, rgba(102, 0, 0, 0) 60%), radial-gradient(rgb(102, 0, 0) 35%, rgba(102, 0, 0, 0) 60%), radial-gradient(rgba(76, 0, 0, 0.701961) 0, rgba(102, 0, 0, 0) 100%), radial-gradient(rgba(76, 0, 0, 0.701961) 0, rgba(102, 0, 0, 0) 100%), linear-gradient(45deg, rgba(102, 0, 0, 0) 49%, rgb(0, 0, 0) 50%, rgba(102, 0, 0, 0) 70%), linear-gradient(-45deg, rgba(102, 0, 0, 0) 49%, rgb(0, 0, 0) 50%, rgba(102, 0, 0, 0) 70%), rgb(51, 0, 0);
+    background-position: 0 0, 50px 50px, 50px 0, 0 50px, 50px 0, 100px 50px, 0 0, 50px 50px, 0 0, 0 0;
+    -webkit-background-origin: padding-box;
+    background-origin: padding-box;
+    -webkit-background-clip: border-box;
+    background-clip: border-box;
+    -webkit-background-size: 100px 100px;
+    background-size: 100px 100px;
 }
 
 .gradient-pattern9 {
