--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -2,22 +2,30 @@
 <div class="text-center">
     <ul class="pagination">
         <li class="page-item{% unless paginator.previous_page %} disabled{% endunless %}">
-            <a class="page-link" href="{% if paginator.previous_page == 1 %}/blog/{% else %}{{ paginator.previous_page_path }}{% endif %}" aria-label="Previous">
+            <a class="page-link"
+               href="{% if paginator.previous_page == 1 %}/blog/{% else %}{{ paginator.previous_page_path }}javascript:void(0){% endif %}"
+               aria-label="Previous">
                 <span aria-hidden="true">&laquo;</span>
                 <span class="sr-only">Previous</span>
             </a>
         </li>
         {% for page in (1..paginator.total_pages) %}
         {% if page == paginator.page %}
-        <li class="page-item active"><a class="page-link" href="#">{{ page }} <span class="sr-only">(current)</span></a></li>
+        <li class="page-item active"><a class="page-link" href="#">{{ page }} <span class="sr-only">(current)</span></a>
+        </li>
         {% elsif page == 1 %}
         <li class="page-item"><a class="page-link" href="/">1</a></li>
         {% else %}
-        <li class="page-item"><a class="page-link" href="{{ site.paginate_path | replace: ':num', page }}">{{ page }}</a></li>
+        <li class="page-item">
+            <a class="page-link" href="{{ site.paginate_path | replace: ':num', page }}">
+                {{ page }}
+            </a>
+        </li>
         {% endif %}
         {% endfor %}
         <li class="page-item{% unless paginator.next_page %} disabled{% endunless %}">
-            <a class="page-link" href="{% if paginator.next_page %}{{ paginator.next_page_path }}{% else %}#{% endif %}" aria-label="Next">
+            <a class="page-link" href="{% if paginator.next_page %}{{ paginator.next_page_path }}{% else %}javascript:void(0){% endif %}"
+               aria-label="Next">
                 <span aria-hidden="true">&raquo;</span>
                 <span class="sr-only">Next</span>
             </a>
