--- a/_includes/disqus-comments.html
+++ b/_includes/disqus-comments.html
@@ -1,7 +1,7 @@
 <section id="share-comment">
     <br/>
 
-    <div class="jiathis_style">
+    <div>
         <span>分享到：</span>
         <a href="javascript:void(0);"><i class="fa fa-weixin fa-fw"></i> 微信</a>
         <a href="javascript:shareTSina('{{page.title}}', '');"><i class="fa fa-weibo fa-fw"></i> 新浪微博</a>
