--- a/_layouts/github-plugins.html
+++ b/_layouts/github-plugins.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
 <html>
-{% include github-head.html %}
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>{% if page.title %}{{ page.title | escape }} - {{ site.title}}{% else %}{{ site.title | escape }}{% endif %}</title>
+    {% seo title=false %}
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="bookmark" href="/favicon.ico">
+    {% feed_meta %}
+    <link rel="stylesheet" href="/components/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/components/font-awesome/css/font-awesome.min.css">
+    <link type="text/css" rel="stylesheet" href="{{site.url}}/resources/syntax/shCoreDefault.css"/>
+    <link rel="stylesheet" type="text/css" href="/assets/css/common.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/pattern.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/github.css">
+    {% for css in page.romotecss %}
+    <link rel="stylesheet" href="{{site.url}}{{css}}">
+    {% endfor %}
+    <script type="text/javascript" src="/components/jquery/jquery-1.12.4.min.js"></script>
+    {% for javascript in page.romotejs %}
+    <script src="{{site.url}}{{javascript}}"></script>
+    {% endfor %}
+</head>
 <body>
 {% include header.html %}
 {% include jumbotron-post.html %}
-<article class="container">
+<div class="container">
     <div class="row">
         <div class="col-md-9" id="github-main">
             {{ content }}
@@ -94,10 +116,15 @@
             {% endunless %}
         </div>
         <div class="col-md-3">
-            {% include github-dir-sidebar.html %}
-        </div>
+            <div class="btn-label">
+                <div class="paper-title"> Tag Cloud</div>
+                {% for tag in site.tags %}
+                <a href="/tag/{{tag.slug}}" class="btn btn-default">{{ tag.name }}({{site.tags[tag.slug].size|default:0}})</a>
+                {% endfor %}
+            </div>
+        </div></div>
     </div>
-</article>
+</div>
 {% include footer.html %}
 </body>
 </html>
