--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    font-family: Microsoft YaHei,"Helvetica Neue",Helvetica,"Segoe UI",Arial,freesans,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+}
+
 body {
     background: white;
     overflow-x: hidden;
@@ -9,8 +15,9 @@ img {
 
 /* modify bootstrap default style start */
 .navbar-default {
-    font-size: 16px;
-    padding-bottom: 6px;
+    font-size: 18px;
+    padding-top: 6px;
+    padding-bottom: 12px;
     /*top: 20px;*/
 }
 
