--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -14,7 +14,7 @@
         <li class="page-item active"><a class="page-link" href="#">{{ page }} <span class="sr-only">(current)</span></a>
         </li>
         {% elsif page == 1 %}
-        <li class="page-item"><a class="page-link" href="/">1</a></li>
+        <li class="page-item"><a class="page-link" href="/blog/">1</a></li>
         {% else %}
         <li class="page-item">
             <a class="page-link" href="{{ site.paginate_path | replace: ':num', page }}">
