--- a/_layouts/github-plugins.html
+++ b/_layouts/github-plugins.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>{% if page.title %}{{ page.title | escape }} - {{ site.title}}{% else %}{{ site.title | escape }}{% endif %}</title>
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>{% if page.title %}{{ page.title | escape }} - {{ site.title}}{% else %}{{ site.title | escape }}{% endif
+        %}</title>
     {% seo title=false %}
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="bookmark" href="/favicon.ico">
@@ -116,14 +118,10 @@
             {% endunless %}
         </div>
         <div class="col-md-3">
-            <div class="btn-label">
-                <div class="paper-title"> Tag Cloud</div>
-                {% for tag in site.tags %}
-                <a href="/tag/{{tag.slug}}" class="btn btn-default">{{ tag.name }}({{site.tags[tag.slug].size|default:0}})</a>
-                {% endfor %}
-            </div>
-        </div></div>
+            {% include github-dir-sidebar.html %}
+        </div>
     </div>
+</div>
 </div>
 {% include footer.html %}
 </body>
